# databricks

./: .gitignore  Cargo.toml  README.md
apps/: Cargo.toml
apps/src/: apps.rs  apps_settings.rs  lib.rs  types.rs
billing/: Cargo.toml
billing/src/: budget_policy.rs  budgets.rs  lib.rs  log_delivery.rs  types.rs  usage.rs  usage_dashboards.rs
catalog/: Cargo.toml
catalog/src/: artifact_allowlists.rs  catalog_model_versions.rs  catalog_registered_models.rs  catalogs.rs  connections.rs  external_locations.rs  functions.rs  grants.rs  lib.rs  metastores.rs  online_tables.rs  schemas.rs  storage_credentials.rs  system_schemas.rs  table_constraints.rs  tables.rs  types.rs  volumes.rs  workspace_bindings.rs
compute/: Cargo.toml
compute/src/: cluster_policies.rs  clusters.rs  command_execution.rs  global_init_scripts.rs  instance_pools.rs  instance_profiles.rs  lib.rs  libraries.rs  policy_families.rs  types.rs
core/: Cargo.toml
core/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  paginator.rs  retry.rs  transport.rs  wait.rs
core/src/auth/: basic.rs  chain.rs  mod.rs  oauth.rs  pat.rs
core/src/transport/: hyper.rs
dashboards/: Cargo.toml
dashboards/src/: dashboards.rs  lib.rs  types.rs
databricks/: Cargo.toml
databricks/src/: account.rs  lib.rs  workspace.rs
examples/: genie_chat.rs  sql_query.rs  test_connection.rs
examples/lamp/: Cargo.toml  PLAN.md
examples/lamp/src/: app.rs  component.rs  main.rs  table.rs  ui.rs
examples/lamp/src/component/: chat.rs  header.rs  input.rs  suggestion.rs
files/: Cargo.toml
files/src/: dbfs.rs  files.rs  lib.rs  types.rs
genie/: Cargo.toml
genie/src/: conversations.rs  lib.rs  spaces.rs  types.rs
iam/: Cargo.toml
iam/src/: account_access_control.rs  current_user.rs  groups.rs  lib.rs  permission_migration.rs  permissions.rs  service_principals.rs  types.rs  users.rs  workspace_assignment.rs
jobs/: Cargo.toml
jobs/src/: jobs.rs  lib.rs  runs.rs  types.rs
ml/: Cargo.toml
ml/src/: experiments.rs  lib.rs  model_registry.rs  model_versions.rs  registered_models.rs  runs.rs  types.rs
pipelines/: Cargo.toml
pipelines/src/: lib.rs  pipelines.rs  types.rs
provisioning/: Cargo.toml
provisioning/src/: credentials.rs  encryption_keys.rs  lib.rs  networks.rs  private_access.rs  storage.rs  types.rs  vpc_endpoints.rs  workspaces.rs
serving/: Cargo.toml
serving/src/: lib.rs  serving_endpoints.rs  types.rs
settings/: Cargo.toml
settings/src/: account_ip_access_lists.rs  automatic_cluster_update.rs  compliance_security_profile.rs  default_namespace.rs  enhanced_security_monitoring.rs  ip_access_lists.rs  lib.rs  network_connectivity.rs  notification_destinations.rs  personal_compute.rs  restrict_workspace_admins.rs  token_management.rs  tokens.rs  types.rs  workspace_conf.rs
sharing/: Cargo.toml
sharing/src/: lib.rs  providers.rs  recipient_activation.rs  recipients.rs  shares.rs  types.rs
sql/: Cargo.toml
sql/src/: alert_types.rs  alerts.rs  catalog.rs  lib.rs  queries.rs  query_history.rs  query_history_types.rs  query_types.rs  query_visualizations.rs  statements.rs  types.rs  warehouses.rs
vectorsearch/: Cargo.toml
vectorsearch/src/: endpoints.rs  indexes.rs  lib.rs  types.rs
workspace_api/: Cargo.toml
workspace_api/src/: git_credentials.rs  lib.rs  notebooks.rs  repos.rs  secrets.rs  types.rs
