[package]
name = "databricks_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
http-body-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
rand.workspace = true
async-trait.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile = "3"
