[package]
name = "databricks"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
databricks_core = { path = "../core" }
databricks_sql = { path = "../sql" }
databricks_genie = { path = "../genie" }

[[example]]
name = "test_connection"
path = "../examples/test_connection.rs"

[[example]]
name = "sql_query"
path = "../examples/sql_query.rs"

[[example]]
name = "genie_chat"
path = "../examples/genie_chat.rs"

[dev-dependencies]
tokio.workspace = true
serde.workspace = true
