[package]
name = "databricks"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
databricks_core = { path = "../core" }
databricks_sql = { path = "../sql" }
databricks_genie = { path = "../genie" }
databricks_compute = { path = "../compute" }
databricks_jobs = { path = "../jobs" }
databricks_files = { path = "../files" }
databricks_workspace_api = { path = "../workspace_api" }
databricks_iam = { path = "../iam" }
databricks_catalog = { path = "../catalog" }
databricks_serving = { path = "../serving" }
databricks_pipelines = { path = "../pipelines" }
databricks_ml = { path = "../ml" }
databricks_dashboards = { path = "../dashboards" }

[[example]]
name = "test_connection"
path = "../examples/test_connection.rs"

[[example]]
name = "sql_query"
path = "../examples/sql_query.rs"

[[example]]
name = "genie_chat"
path = "../examples/genie_chat.rs"

[dev-dependencies]
tokio.workspace = true
serde.workspace = true
